--- a/.github/workflows/label-issues-real.yml
+++ b/.github/workflows/label-issues-real.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           curl -X POST \
           --url https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/labels \
-          -H 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          -H 'authorization: Bearer ${{ secrets.MY_SECRET }}' \
           -H 'content-type: application/json' \
           -d '{
               "labels": ["bug"]
